slide/src/test/ui/error/invalid_token_multiline.slide
===in
9 * 32 @
  4 ~ 10 - 5 `
10 ,
===in

~~~stdout
~~~stdout

~~~stderr
error: Invalid token
  |
1 | 9 * 32 @
  |        ^
  |
  = note: token must be mathematically significant

error: Invalid token
  |
1 | 9 * 32 @
2 |   4 ~ 10 - 5 `
  |     ^
  |
  = note: token must be mathematically significant

error: Invalid token
  |
1 | 9 * 32 @
2 |   4 ~ 10 - 5 `
  |              ^
  |
  = note: token must be mathematically significant

error: Invalid token
  |
...
3 | 10 , 
  |    ^
  |
  = note: token must be mathematically significant

~~~stderr

~~~exitcode
1
~~~exitcode
